# MotionDetection-Reborn

./: CMakeLists.txt
data/: monday-model.hef
src/: feature_extractor.cpp  feature_extractor.h  keypoint_matcher.cpp  keypoint_matcher.h  main.cpp  model.cpp  model.h  motion_detection.cpp  motion_detection.h
src/include/: feature_extractor.h  keypoint_matcher.h  model.h  motion_detection.h
tests/: test_hailo.cpp
